--- a/application/items/new.html
+++ b/application/items/new.html
@@ -2,7 +2,28 @@
   
 {% block body %}
 <form method="POST" action="{{ url_for('items_create') }}">
-  <input type="text" name="name"/>
-  <input type="submit" value="Add a new item"/>
+<table>
+      <tr>
+	<td>
+	  {{ form.name.label }}
+	</td>
+	<td>
+	  {{ form.name }}
+	</td>
+      </tr>
+      <tr>
+	<td>
+	  {{ form.check.label }}
+	</td>
+	<td>
+	  {{ form.check }}
+	</td>
+      </tr>
+      <tr>
+	<td colspan="2">
+	  <input type="submit" value="Add a new item"/>
+	</td>
+      </tr>
+</table>
 </form>
 {% endblock %}
