--- a/application/auth/new.html
+++ b/application/auth/new.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %}
-
+  
 {% block body %}
-{{ error }}
-<form method="POST" action="{{ url_for('auth_login') }}">
+<form method="POST" action="{{ url_for('auth_create') }}">
   <table>
     <tr>
       <td>
@@ -11,6 +10,11 @@
       <td>
 	{{ form.username }}
       </td>
+      	<ul>
+		{% for error in form.username.errors %}
+		<li>{{ error }}</li>
+		{% endfor %}
+	</ul>
     </tr>
     <tr>
       <td>
@@ -22,7 +26,7 @@
     </tr>
     <tr>
       <td colspan="2">
-	<input type="submit" value="Login"/>
+	<input type="submit" value="Create"/>
       </td>
     </tr>
     </table>
